--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -43,7 +43,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/edittextline"
+        android:background="@drawable/edit_text_line"
         android:hint="Fullname"
         android:inputType="textPersonName"
         android:paddingBottom="16dp"
@@ -59,7 +59,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/edittextline"
+        android:background="@drawable/edit_text_line"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingBottom="16dp"
@@ -75,7 +75,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/edittextline"
+        android:background="@drawable/edit_text_line"
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingBottom="16dp"
@@ -91,7 +91,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/edittextline"
+        android:background="@drawable/edit_text_line"
         android:hint="Repeat password"
         android:inputType="textPassword"
         android:paddingBottom="16dp"
