--- a/app/src/main/res/drawable/google_plus_button.xml
+++ b/app/src/main/res/drawable/google_plus_button.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/colorSignInBtnGoogle" />
-            <corners android:radius="@dimen/button_corner_radius" />
+            <solid android:color="@color/colorGooglePlus" />
+            <corners android:radius="@dimen/social_button_corner_radius" />
         </shape>
     </item>
 </selector>
