--- a/app/src/main/res/layout/fragment_my_compares.xml
+++ b/app/src/main/res/layout/fragment_my_compares.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgroundPrimary">
+    android:background="@color/colorBackgroundPrimary"
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_my_compares"
@@ -10,5 +11,22 @@
         android:layout_marginBottom="78dp"
         android:background="@color/colorBackgroundPrimary"
         android:scrollbars="vertical" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No compares" />
+
+    </LinearLayout>
 
 </LinearLayout>
