--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#00BCD4</color>
+    <!--<color name="colorPrimary">#3F51B5</color>-->
+    <!--<color name="colorPrimaryDark">#303F9F</color>-->
+    <!--<color name="colorPrimary">#303F9F</color>-->
+    <!--<color name="colorPrimaryDark">#1A237E</color>-->
+    <!--<color name="colorAccent">#00BCD4</color>-->
+
+    <color name="colorPrimary">#263238</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#03A9F4</color>
 
     <!--SIGN IN ACTIVITY-->
-    <color name="colorSignInBackground">#00796B</color>
-    <color name="colorSignInText">#FFFFFF</color>
-    <color name="colorSignInBtnVk">#36638E</color>
-    <color name="colorSignInBtnText">#FFFFFF</color>
-    <color name="colorSignInBtn">#03A9F4</color>
-    <color name="colorSignInEditTextHint">#9E9E9E</color>
-    <color name="colorSignInEditTextBackground">#FFFFFF</color>
-    <color name="colorSignInLine">#FFFFFF</color>
+    <color name="colorSignInTopBackground">#37474F</color>
 
-    <color name="colorBackgroundPrimary">#FAFAFA</color>
+
+
+    <color name="colorBackgroundPrimary">#FFFFFF</color>
 
     <!--social-->
     <color name="colorSignInUp">#03A9F4</color>
