--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,151 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/colorPrimary"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".screens.activities.SignInActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="24dp"
-        android:text="Sign Up"
-        android:textAllCaps="false"
-        android:textColor="#03A9F4"
-        android:textSize="24sp" />
-
-    <ImageView
-        android:id="@+id/iv_sign_up_photo"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/icon_photo" />
-
-    <!--<TextView-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginLeft="24dp"-->
-    <!--android:layout_marginRight="24dp"-->
-    <!--android:layout_marginTop="24dp"-->
-    <!--android:text="Sign up via email and password"-->
-    <!--android:textColor="#757575"-->
-    <!--android:textSize="18sp" />-->
-
-    <EditText
-        android:id="@+id/et_sign_up_full_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/edit_text_line"
-        android:hint="Fullname"
-        android:inputType="textPersonName"
-        android:paddingBottom="16dp"
-        android:paddingLeft="10dp"
-        android:textColor="#9E9E9E"
-        android:textColorHint="#9E9E9E"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/et_sign_up_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/edit_text_line"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:paddingBottom="16dp"
-        android:paddingLeft="10dp"
-        android:textColor="#9E9E9E"
-        android:textColorHint="#9E9E9E"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/et_sign_up_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/edit_text_line"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingBottom="16dp"
-        android:paddingLeft="10dp"
-        android:textColor="#9E9E9E"
-        android:textColorHint="#9E9E9E"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/et_sign_up_repeat_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/edit_text_line"
-        android:hint="Repeat password"
-        android:inputType="textPassword"
-        android:paddingBottom="16dp"
-        android:paddingLeft="10dp"
-        android:textColor="#9E9E9E"
-        android:textColorHint="#9E9E9E"
-        android:textSize="16sp" />
-
     <LinearLayout
+        android:gravity="center_horizontal"
+        android:id="@+id/ll_sign_up_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="20dp"
-        android:gravity="end"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_sign_up_go_login"
-            style="?borderlessButtonStyle"
+        <TextView
+            android:id="@+id/tv_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:text="LOGIN"
-            android:textAllCaps="true"
-            android:textColor="#03A9F4"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="24dp"
+            android:text="@string/app_name"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="26sp" />
+
+        <ImageView
+            android:id="@+id/iv_sign_up_photo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="22dp"
+            android:src="@drawable/icon_photo" />
+
+        <EditText
+            android:id="@+id/et_sign_up_full_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/sign_up_et_selector"
+            android:hint="Full name"
+            android:inputType="textPersonName"
+            android:paddingBottom="16dp"
+            android:paddingLeft="10dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#BDBDBD"
+            android:textCursorDrawable="@null"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/et_sign_up_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/sign_up_et_selector"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:paddingBottom="16dp"
+            android:paddingLeft="10dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#BDBDBD"
+            android:textCursorDrawable="@null"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/et_sign_up_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/sign_up_et_selector"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingBottom="16dp"
+            android:paddingLeft="10dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#BDBDBD"
+            android:textCursorDrawable="@null"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/et_sign_up_repeat_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/sign_up_et_selector"
+            android:hint="Repeat password"
+            android:inputType="textPassword"
+            android:paddingBottom="16dp"
+            android:paddingLeft="10dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#BDBDBD"
+            android:textCursorDrawable="@null"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btn_sign_up"
-            style="?borderlessButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="22dp"
             android:background="#03A9F4"
             android:text="SIGN UP"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_sign_up_skip_login"
+    <TextView
+        android:id="@+id/tv_already_have_an_account"
         style="?borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_toLeftOf="@id/btn_sign_in"
-        android:text="Skip >>"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Already have an Account?"
         android:textAllCaps="false"
         android:textColor="#03A9F4"
         android:textSize="16sp" />
 
-</LinearLayout>
+</RelativeLayout>
