--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,14 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
     <style name="AppTheme.Button" parent="Base.Widget.AppCompat.Button">
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/colorSignInBtnText</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="AppTheme.Button.Sign" parent="AppTheme.Button">
@@ -23,18 +18,6 @@
         <item name="android:textAllCaps">true</item>
         <item name="android:background">@drawable/sign_button</item>
         <item name="android:textSize">@dimen/text_size_sign_button</item>
-    </style>
-
-    <style name="AppTheme.Button.GooglePlus" parent="AppTheme.Button">
-        <item name="android:textStyle">normal</item>
-        <item name="android:background">@drawable/google_plus_button</item>
-        <item name="android:textSize">@dimen/text_size_social_login_button</item>
-    </style>
-
-    <style name="AppTheme.Button.Facebook" parent="AppTheme.Button">
-        <item name="android:textStyle">normal</item>
-        <item name="android:background">@drawable/facebook_button</item>
-        <item name="android:textSize">@dimen/text_size_social_login_button</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
