--- a/app/src/main/res/drawable/toolbar_shadow.xml
+++ b/app/src/main/res/drawable/toolbar_shadow.xml
@@ -3,10 +3,6 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:endColor="#40000000"
+        android:endColor="#b3000000"
         android:startColor="@android:color/transparent" />
-</shape><!--<shape xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:shape="rectangle">-->
-
-    <!--<gradient--><!--android:angle="90"--><!--android:endColor="#88333333"--><!--android:startColor="@android:color/transparent" />-->
-
-    <!--</shape>-->
+</shape>
