--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -65,7 +65,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="24dp"
-            android:background="03A9F4"
+            android:background="#03A9F4"
             android:text="@string/label_login"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
