--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,13 +22,15 @@
 
     <style name="AppTheme.Button.GooglePlus" parent="AppTheme.Button">
         <item name="android:textStyle">normal</item>
-        <item name="android:background">@drawable/google_plus_button</item>
+        <!--<item name="android:background">@drawable/google_plus_button</item>-->
+        <item name="android:background">@drawable/common_google_signin_btn_icon_light</item>
         <item name="android:textSize">@dimen/text_size_social_login_button</item>
     </style>
 
     <style name="AppTheme.Button.Facebook" parent="AppTheme.Button">
         <item name="android:textStyle">normal</item>
-        <item name="android:background">@drawable/facebook_button</item>
+        <!--<item name="android:background">@drawable/facebook_button</item>-->
+        <item name="android:background">@drawable/com_facebook_button_icon</item>
         <item name="android:textSize">@dimen/text_size_social_login_button</item>
     </style>
 
