--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <solid android:color="#00ffffff" />
-    <corners android:radius="12dp" />
-    <stroke android:width="8dp" android:color="@color/colorPrimary" />
+    <solid android:color="@android:color/transparent" />
+    <corners android:radius="18dp" />
+    <stroke android:width="18dp" android:color="@color/colorBackgroundPrimary" />
     
 </shape>
