--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -10,14 +10,16 @@
         android:id="@+id/profile_toolbar"
         style="@style/AppTheme.Profile.Toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:title="@string/profile_toolbar_title"
+        android:layout_height="?attr/actionBarSize" />
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:background="@color/colorBackgroundPrimary"
         android:layout_height="wrap_content">
 
         <ScrollView
+            android:id="@+id/profile_sv"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -34,6 +36,7 @@
                         android:id="@+id/profile_iv_avatar"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:focusableInTouchMode="true"
                         android:scaleType="centerCrop" />
 
                     <LinearLayout
@@ -74,6 +77,7 @@
                     android:textSize="25sp" />
 
                 <android.support.v7.widget.RecyclerView
+                    android:focusable="false"
                     android:id="@+id/profile_rv_friends"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
