--- a/app/src/main/res/layout/activity_add_compare.xml
+++ b/app/src/main/res/layout/activity_add_compare.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".screens.activities.AddCompareActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_add_compare"
@@ -11,40 +13,100 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:elevation="4dp"
+        app:title="Add compare"
         app:titleTextColor="@android:color/white" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white">
-
-        <View
-            android:id="@+id/toolbar_shadow_add_compare"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/toolbar_shadow" />
-
-    </FrameLayout>
-
-    <EditText
-        android:id="@+id/et_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/et_first"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/et_second"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/btn_new"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create" />
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
+        android:text="Question"
+        android:textColor="#BDBDBD"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/add_compare_et_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:hint="Type your question"
+        android:textColorHint="#BDBDBD" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="12dp"
+        android:text="Variants"
+        android:textColor="#000000"
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
+        android:text="Variant"
+        android:textColor="#BDBDBD"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/add_compare_et_variant_one"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:hint="Type your variant"
+        android:textColorHint="#BDBDBD" />
+
+    <ImageView
+        android:id="@+id/add_compare_img_one"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="4dp"
+        android:src="@drawable/stand_photo" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
+        android:text="Variant"
+        android:textColor="#BDBDBD"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/add_compare_et_variant_two"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:hint="Type your variant"
+        android:textColorHint="#BDBDBD" />
+
+    <ImageView
+        android:id="@+id/add_compare_img_two"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="4dp"
+        android:src="@drawable/stand_photo" />
+
+    <!--<EditText-->
+    <!--android:id="@+id/et_first"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" />-->
+
+    <!--<EditText-->
+    <!--android:id="@+id/et_second"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" />-->
+
+    <!--<Button-->
+    <!--android:id="@+id/btn_new"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="Create" />-->
 
 </LinearLayout>
