--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--<color name="colorPrimary">#3F51B5</color>-->
-    <!--<color name="colorPrimaryDark">#303F9F</color>-->
-    <!--<color name="colorPrimary">#303F9F</color>-->
-    <!--<color name="colorPrimaryDark">#1A237E</color>-->
-    <!--<color name="colorAccent">#00BCD4</color>-->
-
+    <color name="colorLightPrimary">#37474F</color>
     <color name="colorPrimary">#263238</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#03A9F4</color>
 
     <!--SIGN IN ACTIVITY-->
-    <color name="colorSignInTopBackground">#37474F</color>
 
 
 
