--- a/app/src/main/res/drawable/frame_circle.xml
+++ b/app/src/main/res/drawable/frame_circle.xml
@@ -3,6 +3,7 @@
     android:shape="oval">
     <solid android:color="@android:color/transparent" />
     <stroke
-        android:width="16dp"
-        android:color="@android:color/white" />
+        android:width="2dp"
+        android:color="@color/colorLightPrimary" />
+
 </shape>
