--- a/app/src/main/res/drawable/vertical_line.xml
+++ b/app/src/main/res/drawable/vertical_line.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <size
+        android:width="2dp"
+        android:height="30dp" />
     <solid android:color="@android:color/transparent" />
     <stroke
-        android:width="16dp"
-        android:color="#fcfcfc" />
-
+        android:width="1dp"
+        android:color="@color/colorLightPrimary"
+        android:dashGap="4dp"
+        android:dashWidth="4dp" />
 </shape>
