--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
@@ -10,13 +10,13 @@
         android:id="@+id/profile_toolbar"
         style="@style/AppTheme.Profile.Toolbar"
         android:layout_width="match_parent"
-        app:title="@string/profile_toolbar_title"
-        android:layout_height="?attr/actionBarSize" />
+        android:layout_height="?attr/actionBarSize"
+        app:title="@string/profile_toolbar_title" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:background="@color/colorBackgroundPrimary"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorBackgroundPrimary">
 
         <ScrollView
             android:id="@+id/profile_sv"
@@ -62,25 +62,37 @@
                     </LinearLayout>
                 </FrameLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="4dp"
-                    android:background="@drawable/toolbar_shadow" />
+                <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="4dp"-->
+                <!--android:background="@drawable/toolbar_shadow" />-->
 
-                <TextView
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="20dp"
-                    android:text="Your friends"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="25sp" />
+                    android:layout_height="140dp"
+                    android:background="@color/colorLightPrimary">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:padding="20dp"
+                        android:text="Friend lists"
+                        android:textColor="@android:color/white"
+                        android:textSize="25sp" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:layout_gravity="bottom"
+                        android:src="@drawable/triangle" />
+                </FrameLayout>
 
                 <android.support.v7.widget.RecyclerView
-                    android:focusable="false"
                     android:id="@+id/profile_rv_friends"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:focusable="false" />
 
             </LinearLayout>
         </ScrollView>
