--- a/app/src/main/res/layout/item_rv_friend.xml
+++ b/app/src/main/res/layout/item_rv_friend.xml
@@ -3,7 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/activity_vertical_margin">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:background="@color/colorBackgroundPrimary"
+    android:paddingRight="@dimen/activity_horizontal_margin">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="54dp"
+        android:paddingTop="8dp"
+        android:src="@drawable/vertical_line" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,26 +20,33 @@
         android:orientation="horizontal">
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="@dimen/profile_friend_photo_size"
+            android:layout_height="@dimen/profile_friend_photo_size">
 
             <ImageView
                 android:id="@+id/profile_iv_friend_avatar"
                 android:layout_width="@dimen/profile_friend_photo_size"
                 android:layout_height="@dimen/profile_friend_photo_size"
                 android:padding="1dp"
+                android:layout_gravity="center"
                 android:scaleType="centerCrop"
                 android:src="@drawable/test_img" />
 
             <ImageView
-                android:layout_width="@dimen/profile_friend_photo_size"
-                android:layout_height="@dimen/profile_friend_photo_size"
-                android:src="@drawable/frame" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/rectangle" />
 
             <ImageView
-                android:layout_width="@dimen/profile_friend_photo_size"
-                android:layout_height="@dimen/profile_friend_photo_size"
-                android:src="@drawable/circle" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/circle"/>
+
+            <ImageView
+                android:padding="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/frame_circle" />
         </FrameLayout>
 
         <TextView
@@ -40,9 +56,4 @@
             android:layout_height="wrap_content"
             android:text="Alis Anderson" />
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@drawable/divider" />
 </LinearLayout>
