--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,6 +43,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                         android:layout_marginLeft="@dimen/profile_tv_margin_left"
                         android:background="@android:color/transparent"
                         android:orientation="vertical">
@@ -61,11 +62,6 @@
 
                     </LinearLayout>
                 </FrameLayout>
-
-                <!--<View-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="4dp"-->
-                <!--android:background="@drawable/toolbar_shadow" />-->
 
                 <FrameLayout
                     android:layout_width="match_parent"
