--- a/app/src/main/res/layout/navigation_header_layout.xml
+++ b/app/src/main/res/layout/navigation_header_layout.xml
@@ -1,48 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="210dp">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/nav_header"
+        android:background="@drawable/nav_drawer_header_img"
         android:scaleType="centerCrop" />
 
-    <ImageView
-        android:id="@+id/nav_header_avatar"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:layout_margin="16dp"
-        android:src="@drawable/icon_no_avatar" />
-
-    <TextView
-        android:id="@+id/nav_header_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:ellipsize="end"
-        android:paddingBottom="36dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:singleLine="true"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        tools:text="Alex Marinovskiy" />
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/nav_header_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:ellipsize="end"
-        android:padding="16dp"
-        android:singleLine="true"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        tools:text="alexander.marinovskiy@gmail.com" />
+        <ImageView
+            android:id="@+id/nav_header_avatar"
+            android:layout_width="92dp"
+            android:layout_height="92dp"
+            android:src="@drawable/icon_no_avatar"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/nav_header_name"
+            style="@style/AppTheme.Drawer.Username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Alex Marinovskiy" />
+
+        <TextView
+            android:id="@+id/nav_header_email"
+            android:layout_width="wrap_content"
+            style="@style/AppTheme.Drawer.Email"
+            android:layout_height="wrap_content"
+            tools:text="alexander.marinovskiy@gmail.com" />
+
+    </LinearLayout>
+
+</FrameLayout>
