--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,10 @@
 
 
     <!-- Text size -->
-    <dimen name="text_size_normal">21sp</dimen>
+    <dimen name="text_size_small">13sp</dimen>
+    <dimen name="text_size_pre_normal">16sp</dimen>
+    <dimen name="text_size_normal">22sp</dimen>
+    <dimen name="text_size_large">28sp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
@@ -22,9 +25,7 @@
     <!-- Profile -->
     <dimen name="profile_header_height">250dp</dimen>
     <dimen name="profile_friend_photo_size">110dp</dimen>
-    <dimen name="profile_tv_padding">4dp</dimen>
+    <dimen name="profile_tv_padding">2dp</dimen>
     <dimen name="profile_tv_margin_left">25dp</dimen>
-    <dimen name="profile_text_username_size">28sp</dimen>
-    <dimen name="profile_text_email_size">14sp</dimen>
 
 </resources>
