--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
     <style name="AppTheme.Profile.TextView" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:padding">@dimen/profile_tv_padding</item>
-        <item name="android:textSize">@dimen/profile_text_email_size</item>
+        <item name="android:textSize">@dimen/text_size_pre_normal</item>
         <!--Shadow-->
         <item name="android:shadowColor">#000000</item>
         <item name="android:shadowDx">1</item>
@@ -39,7 +39,7 @@
     </style>
 
     <style name="AppTheme.Profile.TextView.Username" parent="AppTheme.Profile.TextView">
-        <item name="android:textSize">@dimen/profile_text_username_size</item>
+        <item name="android:textSize">@dimen/text_size_large</item>
     </style>
 
     <style name="AppTheme.Profile.TextView.FriendName" parent="TextAppearance.AppCompat">
@@ -55,6 +55,18 @@
         <item name="title">@string/app_name</item>
         <item name="titleTextColor">@android:color/white</item>
         <item name="android:background">@color/colorPrimary</item>
+    </style>
+
+    <!--NavigationDrawer in MainActivity-->
+    <style name="AppTheme.Drawer.Username" parent="AppTheme.Profile.TextView">
+        <item name="android:textSize">@dimen/text_size_normal</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
+    <style name="AppTheme.Drawer.Email" parent="AppTheme.Profile.TextView">
+        <item name="android:textSize">@dimen/text_size_pre_normal</item>
+        <item name="android:padding">2dp</item>
+        <!--<item name="android:textStyle">bold</item>-->
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
