fix load and add compares

--- a/app/src/main/res/menu/menu_drawer_main.xml
+++ b/app/src/main/res/menu/menu_drawer_main.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/action_nav_about"
-        android:title="Logout" />
+        android:title="About" />
 
     <!--<item-->
         <!--android:id="@+id/action_nav_help"-->
